	Added elite-frac to Subpopulation, and a method for determining the number
		of elites in general.
	Added fraction mechanism to BestSelection
	elite-frac changed to elite-fraction in SimpleBreeder
	n-frac changed to n-fraction in BestSelection
	BitVectorSpecies added.  It is now the species for BitVectorIndividual
	BitVectorIndividual now has TWO kinds of mutation: flip and reset. Flip
		is the default (as it was before, when it had no name).
	Duplicate retries to vector gene mutation.  
	Added merge and num-tests to SimpleEvaluator, and discussion of
		noisy distributed problems
	Fixed bug in Polynomial Mutation which only arises when the gene is
		*unbounded*.  Thanks to Mark Coletti <mcoletti@gmail.com>
	StringBuffer replaced with StringBuilder in GPNode
	Documenation fixes to PTC2 and Uniform
	Added the push facility and the ec/app/push example app
	Modified the Makefile to add a "make push" option
	Updated MersenneTwisterFast and MersenneTwister to version 21
	Added serialVersionUID to various classes
	Increased minimum java version to 1.5
	Added null checking to multiple equals() methods
	Changed usage of StringBuffer to StringBuilder
	Speeded up genotypeToString in various VectorIndividuals
	Fixed fall-through on new BitVectorIndividual mutation mechanism
	Tweak to all VectorIndividuals, removing useless code that copies the
		gene value back during mutation.
	Evolve.primeGenerator pulses one more time (624 * 2 + 1) for good
		measure.  This will cause results to differ from previous
		versions.
	Added ec.eval.MetaProblem
	Promoted 'evaluations' as a parameter for EvolutionState; now both
		SimpleEvolutionState and SteadyStateEvolutionState understand it
	In SteadyStateEvolution, the minimum number of evaluations must be
		equal to the sum of all individuals in the population (it
		used to be, incorrectly, just subpopulation 0).
	Bug fixes to comments of PAGIE1 and to implementation of PAGIE2.
		Thanks to Tom Helmuth <thelmuth@cs.umass.edu>